--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>webapp for s3 practical adv devops</title>s
 </head>
 <body>
     <h1>welcome to home </h1>
-    <p>my name is vivek vivek from d15B , roll no:21 .</p>
+    <p>My name is vivek vivek from d15B , roll no:21 .</p>
 </body>
 </html>
