--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webapp for s3 practical adv devops</title>s
+    <title>webapp for s3 practical adv devops</title>
 </head>
 <body>
     <h1>welcome to home </h1>
